Aggiunte un pò di cose
Sistemato il layout della registrazione.
Sistemato il layout della creazione inserzione.
Aggiunta la checkbox per rendere un inserzione privata quando la si crea.

--- a/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
@@ -14,6 +14,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  background-color: rgba(255, 255, 255, 0.2);
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
@@ -22,7 +23,7 @@
 }
 
 .form-container {
-  max-width: 500px;
+  max-width: 600px;
   padding: 20px;
   border-radius: 5px;
   background-color: transparent;
