--- a/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.html
+++ b/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.html
@@ -6,41 +6,48 @@
 
       <form (ngSubmit)="creaInserzione()">
         <div class="form-group">
-          <label for="titolo">Titolo:</label>
+          <label for="titolo">Titolo*:</label>
           <input type="text" id="titolo" name="titolo" [(ngModel)]="inserzione.title" required>
         </div>
 
         <div class="form-group">
-          <label for="Categoria">Categoria:</label>
-          <select id="Categoria" name="Categoria" [(ngModel)]="inserzione.category" required>
+          <label for="descrizione">Descrizione:</label>
+          <input type="text" id="descrizione" name="descrizione" style="height: 50%;" [(ngModel)]="inserzione.description" class="fixed-height-textarea">
+        </div>
+
+        <div class="form-group">
+          <label for="Categoria">Categoria*:</label>
+          <select id="Categoria" name="Categoria" style="width: 109%" [(ngModel)]="inserzione.category" required>
             <option *ngFor="let category of categoryOptions" [value]="category">{{ category }}</option>
           </select>
         </div>
 
         <div class="form-group">
-          <label for="Brand">Brand:</label>
-          <select id="Brand" name="Brand" [(ngModel)]="inserzione.brand" required>
+          <label for="Brand">Brand*:</label>
+          <select id="Brand" name="Brand" style="width: 109%" [(ngModel)]="inserzione.brand" required>
             <option *ngFor="let brand of brandOptions" [value]="brand">{{ brand }}</option>
           </select>
         </div>
 
         <div class="form-group">
-          <label for="descrizione">Descrizione:</label>
-          <input type="text" id="descrizione" name="descrizione" [(ngModel)]="inserzione.description" required class="fixed-height-textarea">
-        </div>
-
-        <div class="form-group">
-          <label for="prezzo">Prezzo:</label>
-          <input type="text" id="prezzo" name="prezzo" [(ngModel)]="inserzione.price" required>
-        </div>
-
-        <div class="form-group">
-          <label for="foto">Foto (max 6, max 1 MB ciascuna):</label>
+          <label for="foto">Carica foto:</label>
           <input type="file" id="foto" name="foto" accept="image/*" (change)="caricaFoto($event)" multiple>
         </div>
 
-        <button type="submit" [disabled]="!formValido()">Crea Inserzione</button>
+        <div style="display: flex;">
+        <label for="privateAdCheckbox" style="margin-top: 2%" >Crea inserzione in modo privato:</label>
+        <input type="checkbox"  id="privateAdCheckbox" style="width: 10%;" (click)="privatez()">
+        </div>
+
+        <div style="display: flex">
+        <div class="form-group">
+          <label style=" margin-top: 10%" for="prezzo">Prezzo*:</label>
+          <input type="text" id="prezzo" name="prezzo" style="width: 20%;" [(ngModel)]="inserzione.price" required> €
+        </div>
+        <button type="submit" style="margin-top: 10%" [disabled]="!formValido()">Crea Inserzione</button>
+        </div>
       </form>
+
     </div>
   </div>
 </div>
