--- a/VintedProject/src/app/Components/Pages/User/profile/profile.component.html
+++ b/VintedProject/src/app/Components/Pages/User/profile/profile.component.html
@@ -6,6 +6,7 @@
     </div>
     <div class="profile-info">
       <h1>Informazioni Utente</h1>
+      <h3>nickname: {{ user?.id }}</h3>
       <h3>Nome: {{ user?.firstName }}</h3>
       <h3>Cognome: {{ user?.lastName }}</h3>
       <h3>Email: {{ user?.email }}</h3>
