--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -51,7 +51,7 @@
 
 
 
-<div class="insertion-container" *ngIf="mostRequested">
+<div class="insertion-container" style="margin-bottom: 20px" *ngIf="mostRequested">
   <div class="body-content">
     <div style="background-color: #c3d0cd; max-height: 700px;">
       <div class="header">
@@ -70,4 +70,4 @@
   </div>
 </div>
 
-
+<app-bottom-of-the-barrel style="width: 500px; margin-top: 50px; "> </app-bottom-of-the-barrel>
