--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -1,6 +1,6 @@
 <div class="mainDiv">
   <span class="spacer"></span>
-  <div class="titleDiv">
+  <div class="titleDiv" style="margin-right: 15px; min-width: 200px">
 
     <p routerLink="" style="cursor:pointer; margin-top: 10px; margin-right: 10px; margin-left: 10px;">OCARINA SHOP</p>
 
@@ -13,11 +13,11 @@
               <li>
                 <button mat-raised-button href="#" style="height: 55px" (click)="showMenu()" (mouseover)="showMenu()" >Categorie</button> <!-- primo list-item, prima voce del menu -->
                 <ul *ngIf="showSubMenu" style="width: 300px; background-color: white"> <!-- Lista annidata: voci del sotto-menu -->
-                  <li><a  [routerLink]="['/category' , 'Elettronica']">Elettronica</a></li>
-                  <li><a  [routerLink]="['/category' , 'Collezioni']">Collezioni</a></li>
-                  <li><a  [routerLink]="['/category' , 'Abbigliamento']">Abbigliamento</a></li>
-                  <li><a  [routerLink]="['/category' , 'Barche']">Barche</a></li>
-                  <li><a  [routerLink]="['/category' , 'Sport']">Sport</a></li>
+                  <li><a  [routerLink]="['/category' , 'ELETTRONICA']">Elettronica</a></li>
+                  <li><a  [routerLink]="['/category' , 'COLLEZIONI']">Collezioni</a></li>
+                  <li><a  [routerLink]="['/category' , 'ABBIGLIAMENTO']">Abbigliamento</a></li>
+                  <li><a  [routerLink]="['/category' , 'BARCHE']">Barche</a></li>
+                  <li><a  [routerLink]="['/category' , 'SPORT']">Sport</a></li>
                 </ul> <!-- Fine del sotto-menu -->
               </li> <!-- Chiudo il list-item -->
               <!--qui altri list-item -->
@@ -66,4 +66,4 @@
 
 <router-outlet></router-outlet>
 
-<app-bottom-of-the-barrel style="width: 500px; margin-top: 100px; "> </app-bottom-of-the-barrel>
+
