--- a/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.css
@@ -15,6 +15,7 @@
   top: 50%;
   left: 50%;
   background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
