--- a/VintedProject/src/app/Components/Querys/brand/brand.component.html
+++ b/VintedProject/src/app/Components/Querys/brand/brand.component.html
@@ -1,5 +1,5 @@
 <div class="insertion-container" *ngIf="Brandedinsertion">
-  <div class="body-content" style="margin-top: 30px">
+  <div class="body-content" style="margin-top: 30px; min-height: 722px">
     <div class="card-container">
       <div class="card-row">
         <ng-container *ngFor="let item of Brandedinsertion?.content; let i = index;">
