--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -16,10 +16,10 @@
       </div>
       <div class="card-container">
         <div class="card-row" >
-          <div style="margin-bottom: 10px"  *ngFor="let item of mostRequested.content" class="card-item">
+          <div style="margin-bottom: 10px;"  *ngFor="let item of mostRequested.content" class="card-item">
             <app-profile-card [user]="getUserByUserId(item.userId)" [userId]="item.userId" [insertion]="item"></app-profile-card>
           </div>
-          <button type="button" class="btn btn-secondary" style="width: 400px; min-width: 200px;"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
+          <button type="button" class="btn btn-secondary" style="width: 400px; min-width: 200px;  margin-right: 10px"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
         </div>
       </div>
     </div>
