--- a/VintedProject/src/app/Components/Pages/chat/chat.component.css
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.css
@@ -43,3 +43,16 @@
     cursor: pointer;
   }
 }
+
+
+.btn {
+  background-color: #077782;
+  color: white;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
