--- a/VintedProject/src/app/Components/Pages/chat/chat.component.html
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.html
@@ -2,18 +2,20 @@
   <div class="user-list">
     <ul>
       <li *ngFor="let user of users" (click)="onSelectUser(user)">
-        <button class="button btn" style="margin: 10px">{{ user.nickname}}</button>
+        <button class="button btn" [ngClass]="{'selected-user': user === selectedUser}" style="margin: 10px">{{ user.nickname}}</button>
       </li>
     </ul>
   </div>
   <div class="chat-window">
     <div *ngIf="selectedUser" class="messages">
       <div *ngFor="let message of messages" class="message">
-        {{ message.message }}
+        <div class="mess-container" [ngClass]="{'own-message': message.reciver !== myId, 'other-message': message.reciver === myId}">
+          <p>{{ message.message }}</p>
+        </div>
       </div>
     </div>
     <div *ngIf="selectedUser" class="message-input">
-      <input [(ngModel)]="newMessage" placeholder="Type a message..." />
+      <input [(ngModel)]="newMessage" placeholder="Type a message..." (keyup.enter)="sendMessage()" />
       <button (click)="sendMessage()">Send</button>
     </div>
   </div>
