--- a/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.css
+++ b/VintedProject/src/app/Components/Pages/Insertion/insertion-page/insertion-page.component.css
@@ -146,4 +146,133 @@
   padding: 20px;
 }
 
+.offer-message-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0%;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0,0.9);
+  color: white;
+}
+.message{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 25%;
+  top: 20%;
+  height: 50%;
+  width: 50%;
+  border: 1px;
+  border-color: red;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255);
+  color: white;
+}
+
+.offer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 25%;
+  top: 20%;
+  height: 50%;
+  width: 50%;
+  border: 1px;
+  border-color: red;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255);
+  color: white;
+}
+
+.offer-modal h2 {
+  color: black;
+  margin-bottom: 10px;
+}
+
+.offer-modal input {
+  width: 60%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.offer-modal button {
+  background-color: #077782;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.offer-modal button:last-child {
+  margin-top: 0;
+}
+
+.modal-open {
+  overflow: hidden;
+}
+
+.message-modal h2 {
+  color: black;
+  margin-bottom: 10px;
+}
+
+.message-modal input {
+  width: 80%;
+  height: 80%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.message-input {
+  width: 90%;
+  height: 90px;
+  padding: 10px;
+  resize: vertical; /* Abilita lo scorrimento verticale */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.4;
+  margin-bottom: 10px;
+}
+.message-modal button {
+  background-color: #077782;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.message-modal button:last-child {
+  margin-top: 0;
+}
+
+
+body.modal-open::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9998;
+}
+
+
 
