--- a/VintedProject/src/app/Components/Pages/chat/chat.component.css
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.css
@@ -82,3 +82,21 @@
   text-align: left;
 }
 
+.no-chat-message-container {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.no-chat-message-container p {
+  color: white;
+  text-align: center;
+  margin: 0;
+}
+
