--- a/VintedProject/src/app/Components/Pages/chat/chat.component.css
+++ b/VintedProject/src/app/Components/Pages/chat/chat.component.css
@@ -36,6 +36,7 @@
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+
   }
 
   & button {
@@ -98,5 +99,30 @@
   color: white;
   text-align: center;
   margin: 0;
+}
+
+.chat-container {
+  display: flex;
+}
+
+.user-list {
+  width: 30%;
+  border-right: 1px solid #ccc;
+  padding: 1rem;
+}
+
+.chat-window {
+  flex: 1;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Posiziona la chat in basso */
+}
+
+.chat-content-wrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
