--- a/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.html
+++ b/VintedProject/src/app/Components/Pages/Insertion/create-insertion/create-insertion.component.html
@@ -31,7 +31,7 @@
 
         <div class="form-group">
           <label for="foto">Carica foto:</label>
-          <input type="file" id="foto" name="foto" accept="image/*" (change)="caricaFoto($event)" multiple>
+          <input type="file" id="foto" name="foto" accept="image/*" (change)="caricaFoto($event)">
         </div>
 
         <div style="display: flex;">
